--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "A Jeopardy-style online quiz game application",
   "main": "server.js",
   "scripts": {
-    "test": "jest --detectOpenHandles"
+    "test": "jest"
   },
   "author": "Cole Plepel",
   "license": "ISC",
   "repository": {
     "type": "git",
-	"url": "https://github.com/cplepel-py/quiz-game.git"
+    "url": "https://github.com/cplepel-py/quiz-game.git"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9"
   },
   "devDependencies": {
