--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
   "devDependencies": {
     "dotenv": "^8.2.0",
     "jest": "^26.2.2",
+    "mongodb-memory-server": "^6.6.3",
     "supertest": "^4.0.2"
   },
   "jest": {
-    "testRegex": "./test/.*.js$",
+    "testRegex": "./test/.*.test.js$",
     "rootDir": "."
   }
 }
