--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.5.9"
+    "mongodb": "^3.5.9",
+    "nexmo": "^2.8.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
