--- a/package.json
+++ b/package.json
@@ -20,10 +20,23 @@
     "nexmo": "^2.8.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^4.2.1",
     "dotenv": "^8.2.0",
+    "html-webpack-plugin": "^4.3.0",
     "jest": "^26.2.2",
     "mongodb-memory-server": "^6.6.3",
-    "supertest": "^4.0.2"
+    "rimraf": "^3.0.2",
+    "supertest": "^4.0.2",
+    "vue": "^2.6.11",
+    "vue-loader": "^15.9.3",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "jest": {
     "testRegex": "./test/.*.test.js$",
