--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "url": "https://github.com/cplepel-py/quiz-game.git"
   },
   "dependencies": {
+    "@lasso/marko-taglib": "^1.0.15",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "lasso": "^3.3.1",
+    "lasso-marko": "^2.5.0",
+    "marko": "^4.22.7",
     "mongodb": "^3.5.9",
     "nexmo": "^2.8.0"
   },
