--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
-    "nexmo": "^2.8.0"
+    "nexmo": "^2.8.0",
+    "qrcode": "^1.4.4",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
