add Marko transformer for Jest

--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
   },
   "jest": {
     "testRegex": "./test/.*.test.js$",
-    "rootDir": "."
+    "rootDir": ".",
+    "transform": {
+      "^.+\\.marko$": "./test/jest-marko.js"
+	}
   }
 }
